--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <button>Click Me</button>
         <a href="https://www.google.com" target="_blank">Link to MarketWatch</a>
-        
+        <input type="text" />
         
         <script src="app.js" type="text/javascript" charset="utf-8"></script>
     </body>
