update fetch requests

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <button>Click Me</button>
         <a href="https://www.google.com" target="_blank">Link to MarketWatch</a>
         <input type="text" />
+        <h1>Date: 3/25/2022</h1>
+        <h1>Apple Stock Price: <span></span></h1>
+        <h2>Most Recent SEC Filing: <span id="filing"></span></h2>
+        
         
         <script src="app.js" type="text/javascript" charset="utf-8"></script>
     </body>
