--- a/index.html
+++ b/index.html
@@ -3,17 +3,68 @@
     <head>
         <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
         <title>Market Data</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
     </head>
     <body>
-        <button>Click Me</button>
-        <a href="https://www.google.com" target="_blank">Link to MarketWatch</a>
-        <input type="text" />
-        <h1>Date: 3/25/2022</h1>
-        <h1>Apple Stock Price: <span></span></h1>
-        <h2>Most Recent SEC Filing: <span id="filing"></span></h2>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Date: 3/25/2022</h1>
+                    <h1>Apple Stock Price: <span></span></h1>
+                    <h2>Most Recent SEC Filing: <span id="filing"></span></h2>                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary">Click Me</button>
+                    <a href="https://www.google.com" target="_blank">Link to MarketWatch</a>
+                    <input type="text" class="form-control"/>                    
+                </div>  
+            </div>
+        </div>
+        <div>
+          <canvas id="myChart"></canvas>
+        </div>
+
+        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>-->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
         
         
+        <script>
+  const labels = [
+    'January',
+    'February',
+    'March',
+    'April',
+    'May',
+    'June',
+  ];
+
+  const data = {
+    labels: labels,
+    datasets: [{
+      label: 'My First dataset',
+      backgroundColor: 'rgb(255, 99, 132)',
+      borderColor: 'rgb(255, 99, 132)',
+      data: [0, 10, 5, 2, 20, 30, 45],
+    }]
+  };
+
+  const config = {
+    type: 'line',
+    data: data,
+    options: {}
+  };
+</script>
+ 
+<script>
+  const myChart = new Chart(
+    document.getElementById('myChart'),
+    config
+  );
+</script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="app.js" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
