--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
         
         
         <script>
-  const labels = [
-    'January',
-    'February',
-    'March',
-    'April',
-    'May',
-    'June',
-  ];
+//   const labels = [
+//     'January',
+//     'February',
+//     'March',
+//     'April',
+//     'May',
+//     'June',
+//   ];
 
-  const data = {
-    labels: labels,
-    datasets: [{
-      label: 'My First dataset',
-      backgroundColor: 'rgb(255, 99, 132)',
-      borderColor: 'rgb(255, 99, 132)',
-      data: [0, 10, 5, 2, 20, 30, 45],
-    }]
-  };
+//   const data = {
+//     labels: labels,
+//     datasets: [{
+//       label: 'My First dataset',
+//       backgroundColor: 'rgb(255, 99, 132)',
+//       borderColor: 'rgb(255, 99, 132)',
+//       data: [0, 10, 5, 2, 20, 30, 45],
+//     }]
+//   };
 
-  const config = {
-    type: 'bar',
-    data: data,
-    options: {}
-  };
+//   const config = {
+//     type: 'line',
+//     data: data,
+//     options: {}
+//   };
 </script>
  
 <script>
-  const myChart = new Chart(
-    document.getElementById('myChart'),
-    config
-  );
+//   const myChart = new Chart(
+//     document.getElementById('myChart'),
+//     config
+//   );
 </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="app.js" type="text/javascript" charset="utf-8"></script>
