add additional stock data

--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
                     <p><span class="stockName"></span> stock price for the past 30 days</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col">
                     <canvas id="myChart"></canvas>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-success">Switch Stock</button>
+                    <button class="btn btn-warning">Apple</button>
+                    <button class="btn btn-success" id="amazon-btn">Amazon</button>
+                    <button class="btn btn-danger" id="netflix-btn">Netflix</button>
+                    <button class="btn btn-primary" id="meta-btn">Meta</button>
+                    <button class="btn btn-secondary" id="google-btn">Google</button>
                 </div>
             </div>
         </div>
