refactor API call

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-warning">Apple</button>
+                    <button class="btn btn-warning" id="apple-btn">Apple</button>
                     <button class="btn btn-success" id="amazon-btn">Amazon</button>
                     <button class="btn btn-danger" id="netflix-btn">Netflix</button>
                     <button class="btn btn-primary" id="meta-btn">Meta</button>
