--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                    <h1><span class="stockName"></span> Stock Price: $<span id="price"></span></h1>
+                    <h1><span class="stockName"></span> Stock Price: <span id="price"></span></h1>
                 </div>
             </div>
             <div class="row">
@@ -36,7 +36,6 @@
                 </div>
             </div>
         </div>
-
 
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
